# KSynth

./: .gitignore  README.md
KSynth/: .cproject  .project  CMakeLists.txt  Generator.h  Sequencer.h  SequencerListener.h  SequencerTrack.h  SequencerTrackEvents.h  SoundBaseBinder.h  main.cpp
KSynth/analyzer/: FFTAnalyzer.h
KSynth/fx/: AllPassReverb.h  AllPassReverbGate.h  BiquadFilter.h  BiquadFilterGate.h  CompressorGate.h  Delay.h  DelayBufferFixed.h  Flanger.h  Phaser.h  Reverb.h  RingBuffer.h  RingBufferFixed.h  StereoExpander.h  StereoExpanderGate.h  Vocoder.h
KSynth/huell/: ADSR.h  HuellFunction.h
KSynth/midi/: MidiBinder.h  MidiBinding.h  MidiConstants.h  MidiEvent.h  MidiFile.h  MidiInstruments.h  MidiParser.h  MidiTrack.h
KSynth/misc/: AudioChain.h  AudioFormat.h  DataTypes.h  DeviceDetails.h  Events.h  Functions.h  PinProperties.h  SSE.h  SoundBase.h  SoundProcessor.h  SoundSource.h  Units.h  VUCalc.h
KSynth/mixer/: SimpleMixer.h
KSynth/notes/: Note.h  NoteDescription.h  NoteDevice.h  NoteDeviceOffset.h  NoteVector.h  Notes.h
KSynth/oscillator/: Oscillator.h  OscillatorFunction.h  OscillatorFunctions.h  SimpleOscillator.h  SimpleOscillator2.h
KSynth/output/: MasterTarget.h  SoundSink.h  SoundSinkAlsa.h  SoundSinkExport.h  SoundSinkExportMp3.h  SoundSinkExportWave.h  SoundSinkHardware.h  SoundSinkHardwareAlsa.h  SoundSinkHardwareNull.h  SoundSinkHardwarePulse.h  SoundSinkHardwareWaveOut.h  SoundSinkMp3.h  SoundSinkNull.h  SoundSinkWave.h  SoundSinkWaveOut.h
KSynth/pattern/: PatternSequencer.h
KSynth/sampler/: Sample.h  SampleFactory.h  (+3 more)
(+178 files in other folders)
